@@ -16,6 +16,7 @@ Version 1.12.5+dev:
    * Fixed possible assertion failues in mp.
    * Fixed false positive OOS messages in replay when replaying games from an older
      wesnoth version..
+   * Fixed unit test compilation against Boost 1.60 and later (bug #24234).
 
 Version 1.12.5:
  * Campaigns:
